fix: set overflow-x to clip on body to prevent horizontal scrollbar

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -48,6 +48,7 @@ body {
   line-height: 1.5;
   letter-spacing: -2.2%;
   color: var(--text-primary);
+  overflow-x: clip;
 }
 
 .heading-1 {
